Integrated the following from //depot/zimbra/GNR/...: Change 335079 by quanah@qgnr on 2011/10/18 11:54:48
bug: 57330
Add upgrade step

http://bugzilla.zimbra.com/show_bug.cgi?id=57330

Copied from Perforce
 Change: 335081